// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`autoFillTaxes — Lucro Presumido / Comércio (lançamento guiado) > snapshot completo (LP Comércio) 1`] = `
[
  {
    "apurado": "1.300,00",
    "base": "200.000,00",
    "dueDate": "25/06/2026",
    "provisao": undefined,
    "rate": "0,65",
    "retido": "",
    "tax": "PIS",
    "value": "1.300,00",
  },
  {
    "apurado": "6.000,00",
    "base": "200.000,00",
    "dueDate": "25/06/2026",
    "provisao": undefined,
    "rate": "3,00",
    "retido": "",
    "tax": "COFINS",
    "value": "6.000,00",
  },
  {
    "apurado": "18.400,00",
    "base": "",
    "dueDate": "22/06/2026",
    "provisao": undefined,
    "rate": "",
    "retido": "",
    "tax": "ICMS",
    "value": "18.400,00",
  },
  {
    "apurado": "2.400,00",
    "base": "16.000,00",
    "dueDate": "30/06/2026",
    "provisao": false,
    "rate": "15,00",
    "retido": "",
    "tax": "IRPJ",
    "value": "2.400,00",
  },
  {
    "apurado": "",
    "base": "0,00",
    "dueDate": "30/06/2026",
    "provisao": false,
    "rate": "10,00",
    "retido": "",
    "tax": "Adicional IRPJ",
    "value": "",
  },
  {
    "apurado": "2.160,00",
    "base": "24.000,00",
    "dueDate": "30/06/2026",
    "provisao": false,
    "rate": "9,00",
    "retido": "",
    "tax": "CSLL",
    "value": "2.160,00",
  },
  {
    "apurado": "3.000,00",
    "base": "15.000,00",
    "dueDate": "19/06/2026",
    "provisao": undefined,
    "rate": "20,00",
    "retido": "",
    "tax": "CPP (Patronal)",
    "value": "3.000,00",
  },
  {
    "apurado": "150,00",
    "base": "15.000,00",
    "dueDate": "19/06/2026",
    "provisao": undefined,
    "rate": "1,00",
    "retido": "",
    "tax": "RAT",
    "value": "150,00",
  },
  {
    "apurado": "870,00",
    "base": "15.000,00",
    "dueDate": "19/06/2026",
    "provisao": undefined,
    "rate": "5,80",
    "retido": "",
    "tax": "Terceiros",
    "value": "870,00",
  },
  {
    "apurado": "1.200,00",
    "base": "15.000,00",
    "dueDate": "19/06/2026",
    "provisao": undefined,
    "rate": "8,00",
    "retido": "",
    "tax": "FGTS",
    "value": "1.200,00",
  },
]
`;

exports[`autoFillTaxes — Lucro Presumido / Serviços > snapshot completo (LP Serviços) 1`] = `
[
  {
    "apurado": "650,00",
    "base": "100.000,00",
    "dueDate": "25/06/2026",
    "provisao": undefined,
    "rate": "0,65",
    "retido": "65,00",
    "tax": "PIS",
    "value": "585,00",
  },
  {
    "apurado": "3.000,00",
    "base": "100.000,00",
    "dueDate": "25/06/2026",
    "provisao": undefined,
    "rate": "3,00",
    "retido": "300,00",
    "tax": "COFINS",
    "value": "2.700,00",
  },
  {
    "apurado": "5.000,00",
    "base": "100.000,00",
    "dueDate": "15/06/2026",
    "provisao": undefined,
    "rate": "5,00",
    "retido": "500,00",
    "tax": "ISS",
    "value": "4.500,00",
  },
  {
    "apurado": "4.800,00",
    "base": "32.000,00",
    "dueDate": "30/06/2026",
    "provisao": false,
    "rate": "15,00",
    "retido": "150,00",
    "tax": "IRPJ",
    "value": "4.650,00",
  },
  {
    "apurado": "1.200,00",
    "base": "12.000,00",
    "dueDate": "30/06/2026",
    "provisao": false,
    "rate": "10,00",
    "retido": "",
    "tax": "Adicional IRPJ",
    "value": "1.200,00",
  },
  {
    "apurado": "2.880,00",
    "base": "32.000,00",
    "dueDate": "30/06/2026",
    "provisao": false,
    "rate": "9,00",
    "retido": "100,00",
    "tax": "CSLL",
    "value": "2.780,00",
  },
  {
    "apurado": "6.000,00",
    "base": "30.000,00",
    "dueDate": "19/06/2026",
    "provisao": undefined,
    "rate": "20,00",
    "retido": "",
    "tax": "CPP (Patronal)",
    "value": "6.000,00",
  },
  {
    "apurado": "200,00",
    "base": "20.000,00",
    "dueDate": "19/06/2026",
    "provisao": undefined,
    "rate": "1,00",
    "retido": "",
    "tax": "RAT",
    "value": "200,00",
  },
  {
    "apurado": "1.160,00",
    "base": "20.000,00",
    "dueDate": "19/06/2026",
    "provisao": undefined,
    "rate": "5,80",
    "retido": "",
    "tax": "Terceiros",
    "value": "1.160,00",
  },
  {
    "apurado": "1.600,00",
    "base": "20.000,00",
    "dueDate": "19/06/2026",
    "provisao": undefined,
    "rate": "8,00",
    "retido": "",
    "tax": "FGTS",
    "value": "1.600,00",
  },
]
`;

exports[`autoFillTaxes — MEI / Serviços > snapshot completo (MEI) 1`] = `
[
  {
    "apurado": "86,05",
    "base": "",
    "dueDate": "22/06/2026",
    "provisao": undefined,
    "rate": "",
    "retido": "",
    "tax": "DAS-MEI",
    "value": "86,05",
  },
]
`;

exports[`autoFillTaxes — Simples Nacional / Serviços > snapshot completo (SN Serviços) 1`] = `
[
  {
    "apurado": "4.986,00",
    "base": "50.000,00",
    "dueDate": "22/06/2026",
    "provisao": undefined,
    "rate": "9,9720",
    "retido": "",
    "tax": "DAS",
    "value": "4.986,00",
  },
  {
    "apurado": "",
    "base": "",
    "dueDate": "15/06/2026",
    "provisao": undefined,
    "rate": "",
    "retido": "",
    "tax": "ISS (retido)",
    "value": "",
  },
  {
    "apurado": "",
    "base": "",
    "dueDate": "19/06/2026",
    "provisao": undefined,
    "rate": "11,00",
    "retido": "",
    "tax": "INSS (Sócio)",
    "value": "",
  },
]
`;
